Fixed issue where defualt highscore file was always being copied from the project directory to the output directory. Now set to only copy if the file in the project directory is newer.

--- a/ArkanoidClone/ArkanoidClone.csproj
+++ b/ArkanoidClone/ArkanoidClone.csproj
@@ -27,7 +27,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Update="Data\highScores.json">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
   <Target Name="RestoreDotnetTools" BeforeTargets="Restore">
